# iiss-2023

temas/Aspectos/: README.md
temas/Aspectos/VehicleProject/: EnsureFuelAspect.cs  IVehicle.cs  LogAttribute.cs  Program.cs  Vehicle.cs  VehicleProject.csproj  VehicleProject.sln
temas/Aspectos/VehicleProject/Models/: Vehicle.cs
temas/anotaciones/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
temas/anotaciones/src/: app.js  app.ts  logger.ts  main.rs
temas/anotaciones/vehicle_info_macro/: Cargo.toml
temas/anotaciones/vehicle_info_macro/src/: lib.rs
temas/asincrono/: Cargo.toml  README.md  asincrona.py
temas/asincrono/src/: main.rs
temas/aspectos/: README.MD  aspectos.py
temas/delegacion/: Coche.cs  Delegacion.py  Program.cs  README.md  delegacion.cs
temas/encapsulacion/: Encapsulacion.rb  README.md  encapsulacion.rb  readme.md
temas/herencia/: Herencia.py  Package.swift  README.md  herencia.cs
temas/herencia/Sources/: main.swift
temas/inyeccion/: Inyeccion.rb  Package.swift  Program.cs  README.md  main.rb
temas/inyeccion/Sources/: main.swift
temas/lambdas/: Lambdas.kt  README.md  lambdas.rb  readme.md
temas/observables/: Package.swift  README.md  observable.py
temas/observables/Sources/: main.swift
temas/undefined/: Cargo.toml  README.md  undefined.scala
temas/undefined/src/: cars.rs  dealership.rs  main.rs
